# py-course

./: .gitignore  CLAUDE.md  CURRICULUM.md  PROGRESS.md  PYTHON_COURSE.md  README.md  pyproject.toml
course-book/00-foundations/week-01/: day-01-environment.md  day-02-poetry.md  day-03-type-hints.md  day-04-linting.md  day-05-vscode-git.md  week-01-project.md
course-book/00-foundations/week-02/: day-01-variables-types.md  day-02-strings.md  day-03-control-flow.md  day-04-loops.md  day-05-io-files.md  week-02-project.md
course-book/00-foundations/week-03/: day-01-lists.md  day-02-tuples.md  day-03-sets.md  day-04-dictionaries.md  day-05-complexity.md  week-03-project.md
course-book/00-foundations/week-04/: day-01-functions.md  day-02-args-kwargs.md  day-03-decorators.md  day-04-generators.md  day-05-lambdas.md  week-04-project.md
course-book/00-foundations/week-05/: day-01-classes-objects.md  day-02-properties-encapsulation.md  day-03-inheritance.md  day-04-special-methods.md  day-05-dataclasses.md  week-05-project.md
course-book/00-foundations/week-06/: day-01-exceptions.md  day-02-custom-exceptions.md  day-03-logging.md  day-04-pytest.md  day-05-tdd.md  week-06-project.md
course-book/00-foundations/week-07/: day-01-modules.md  day-02-packages.md  day-03-publishing.md  day-04-virtual-environments.md  day-05-dependency-management.md  week-07-project.md
course-book/00-foundations/week-08/: day-01-file-io-advanced.md  day-02-json.md  day-03-csv.md  day-04-xml-html.md  day-05-sqlite.md  week-08-capstone-project.md
course-book/01-intermediate/week-09/: day-01-abcs.md  day-02-protocols.md  day-03-mixins.md  day-04-metaclasses.md  day-05-descriptors.md  week-09-project.md
course-book/01-intermediate/week-10/: day-01-purity-immutability.md  day-02-monads.md  day-03-partial-currying.md  day-04-pipelines.md  day-05-recursion.md  week-10-project.md
course-book/01-intermediate/week-11/: day-01-async-await.md  day-02-asyncio.md  day-03-async-context.md  day-04-concurrency-patterns.md  day-05-async-libs.md  week-11-project.md
course-book/01-intermediate/week-12/: day-01-threading.md  day-02-multiprocessing.md  day-03-concurrent-futures.md  day-04-synchronization.md  day-05-performance.md  week-12-project.md
course-book/01-intermediate/week-13/: day-01-http-clients.md  day-02-rest-api-design.md  day-03-websockets.md  day-04-network-programming.md  day-05-api-integration.md  week-13-project.md
course-book/01-intermediate/week-14/: day-01-sql-design.md  day-02-sqlalchemy-core.md  (+4 more)
course-book/05-graduation-project/: ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  PROJECT_OVERVIEW.md
(+53 files in other folders)
